--- a/assets/css/mainStyle.css
+++ b/assets/css/mainStyle.css
@@ -3,25 +3,96 @@ header {
     top: 0;
     right: 0;
     left: 0;
-    height: 120px;
+    height: 150px;
     text-align: center;
     background-color: #269;
-    background-image:
-        linear-gradient(rgba(255, 255, 255, .5) 1px, transparent 4px),
-        linear-gradient(90deg, rgba(255, 255, 255, .5) 1px, transparent 4px),
-        linear-gradient(rgba(255, 255, 255, .3) 1px, transparent 1px),
-        linear-gradient(90deg, rgba(255, 255, 255, .3) 1px, transparent 1px);
+    background-image: linear-gradient(rgba(255, 255, 255, .5) 1px, transparent 4px), linear-gradient(90deg, rgba(255, 255, 255, .5) 1px, transparent 4px), linear-gradient(rgba(255, 255, 255, .3) 1px, transparent 1px), linear-gradient(90deg, rgba(255, 255, 255, .3) 1px, transparent 1px);
     background-size: 40px 40px, 40px 40px, 10px 10px, 10px 10px;
     background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
-    box-shadow:  0px 3px 8px 2px rgba(80, 80, 80, 1);
+    box-shadow: 0px 3px 8px 2px rgba(80, 80, 80, 1);
 }
 
 .banner {
     padding: 10px;
     color: #ffffff;
     text-shadow: 0px 3px 30px #fafaff;
+    z-index: 999;
 }
 
-.main{
-    margin-top: 130px;
+.main {
+    margin-top: 180px;
+    padding: 0 20px;
 }
+
+.tab-container {
+    margin: auto;
+}
+
+pre {
+    margin: 0;
+    border-radius: 3px;
+    border: 3px solid rgba(240, 240, 240, 0.7);
+    -webkit-box-shadow: inset 0px 0px 5px 1px rgba(0, 0, 0, 1);
+    box-shadow: inset 0px 0px 5px 1px rgba(0, 0, 0, 1);
+}
+
+.table-container{
+    width: 75%;
+    margin: 20px auto;
+}
+
+.menu{
+    width: 100%;
+    text-align: left;
+    margin-top: 5px;
+}
+
+.menu > li{
+    list-style: none;
+    display: inline;
+    float: left;
+}
+
+.menu > li > a {
+    width: 100px;
+    line-height: 1.8em;
+    color: rgb(80,80,80);
+}
+
+.selected{
+    background-color: rgb(255, 238, 126);
+}
+
+.side-controls{
+    margin-left: 15px;
+    float: left;
+    width: 20%;
+    background: #d9e1e8;
+    color: rgb(80,80,80);
+    padding: 5px;
+    border:2px dashed #269;
+}
+
+.output-list{
+    display: inline-block;
+    width: 75%;
+    margin-left: 25px;
+    list-style: none;
+}
+
+section{
+    margin-top: 20px;
+    clear: both;
+    overflow-y: hidden;
+}
+
+.firstName-header{
+    text-decoration: underline;
+}
+
+.lastName-cell{
+    color: red;
+}
+
+
+
