--- a/assets/template/pane.html
+++ b/assets/template/pane.html
@@ -1,1 +1,2 @@
-<div class="tab-pane" ng-class="{active: selected}" ng-show="selected" ng-transclude></div>
+<div class="tab-pane" ng-class="{active: selected}" ng-show="selected" ng-transclude>
+</div>
