--- a/assets/css/mainStyle.css
+++ b/assets/css/mainStyle.css
@@ -1,9 +1,20 @@
+
+
+body{
+    margin:0;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+strong{
+    color: #269;
+}
+
 header {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    height: 150px;
     text-align: center;
     background-color: #269;
     background-image: linear-gradient(rgba(255, 255, 255, .5) 1px, transparent 4px), linear-gradient(90deg, rgba(255, 255, 255, .5) 1px, transparent 4px), linear-gradient(rgba(255, 255, 255, .3) 1px, transparent 1px), linear-gradient(90deg, rgba(255, 255, 255, .3) 1px, transparent 1px);
@@ -13,14 +24,17 @@ header {
 }
 
 .banner {
-    padding: 10px;
+    padding: 30px 0;
     color: #ffffff;
     text-shadow: 0px 3px 30px #fafaff;
     z-index: 999;
 }
 
+ul{
+    list-style: square inside;
+}
+
 .main {
-    margin-top: 180px;
     padding: 0 20px;
 }
 
@@ -42,25 +56,58 @@ pre {
 }
 
 .menu {
+    margin: auto;
+    text-align: center;
+    position: fixed;
+    background: #ffffff;
+    top:0;
+    padding: 0;
     width: 100%;
-    text-align: left;
-    margin: 5px 0 0 0;
-    height: 35px;
-    border-top: 2px solid rgb(214, 213, 220);
-    border-bottom: 2px solid rgb(214, 213, 220);
-    background: #000000;
 }
 
-.menu > li {
+.menu.scroll-treshold{
+    background: #269;
+    color: white;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -ms-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    transition: all 0.4s;
+}
+
+.menu > ul{
+    margin: 0;
+    display: inline-block;
+}
+
+.menu  li {
     list-style: none;
     display: inline;
+    padding: 8px;
     float: left;
 }
 
-.menu > li > a {
-    width: 90px;
-    line-height: 1.8em;
-    color: rgb(80, 80, 80);
+.menu li:hover{
+    background: #226a9e;
+    color: #ffffff;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+}
+
+.menu.scroll-treshold li:hover{
+    background: white;
+    color: #269;
+}
+
+.menu  li:not(:last-child){
+    border-right: 1px solid #269;
+}
+
+.menu.scroll-treshold li:not(:last-child){
+    border-right: 1px solid #ffffff;
 }
 
 .selected {
@@ -74,7 +121,7 @@ pre {
     background: #d9e1e8;
     color: rgb(80, 80, 80);
     padding: 5px;
-    border: 2px dashed #269;
+    border: 2px dashed #226a9e;
 }
 
 .output-list {
@@ -84,7 +131,7 @@ pre {
     list-style: none;
     background: #d9e1e8;
     color: rgb(80, 80, 80);
-    border: 2px dashed #269;
+    border: 2px dashed #226a9e;
     padding: 10px;
 }
 
@@ -112,12 +159,11 @@ ul {
 }
 
 em {
-    color: #269;
+    color: #226a9e;
     background: #c1c2c2;
 }
 
 .note {
-    display: inline-block;
     padding: 10px;
     border-radius: 4px;
     background: #269;
@@ -135,8 +181,8 @@ th:not(.selection-header) {
 }
 
 h2 {
-    border-bottom: 2px solid #269;
-    border-top: 2px solid #269;
+    border-bottom: 2px solid #226a9e;
+    border-top: 2px solid #226a9e;
 }
 
 .header-content:before {
@@ -156,6 +202,466 @@ h2 {
 .property-name{
     font-weight: bold;
 }
+
+.git{
+    float: right;
+    color: white;
+    background: #226a9e;
+    margin-right: 30px;
+}
+
+.btn{
+    padding: 8px;
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+.nav {
+    margin-left: 0;
+    list-style: none;
+}
+
+.nav > li > a {
+    display: block;
+}
+
+.nav > li > a:hover,
+.nav > li > a:focus {
+    text-decoration: none;
+    background-color: #eeeeee;
+}
+
+.nav > li > a > img {
+    max-width: none;
+}
+
+.nav > .pull-right {
+    float: right;
+}
+
+.nav-header {
+    display: block;
+    padding: 3px 15px;
+    font-size: 11px;
+    font-weight: bold;
+    line-height: 20px;
+    color: #999999;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    text-transform: uppercase;
+}
+
+.nav li + .nav-header {
+    margin-top: 9px;
+}
+
+.nav-list {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-bottom: 0;
+}
+
+.nav-list > li > a,
+.nav-list .nav-header {
+    margin-right: -15px;
+    margin-left: -15px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+}
+
+.nav-list > li > a {
+    padding: 3px 15px;
+}
+
+.nav-list > .active > a,
+.nav-list > .active > a:hover,
+.nav-list > .active > a:focus {
+    color: #ffffff;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
+    background-color: #0088cc;
+}
+
+.nav-list [class^="icon-"],
+.nav-list [class*=" icon-"] {
+    margin-right: 2px;
+}
+
+.nav.nav-tabs {
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+.nav-tabs,
+.nav-pills {
+    *zoom: 1;
+}
+
+.nav-tabs:before,
+.nav-pills:before,
+.nav-tabs:after,
+.nav-pills:after {
+    display: table;
+    line-height: 0;
+    content: "";
+}
+
+.nav-tabs:after,
+.nav-pills:after {
+    clear: both;
+}
+
+.nav-tabs > li,
+.nav-pills > li {
+    float: left;
+}
+
+.nav-tabs > li > a,
+.nav-pills > li > a {
+    padding-right: 12px;
+    padding-left: 12px;
+    margin-right: 2px;
+    line-height: 14px;
+}
+
+.nav-tabs > li {
+    margin-bottom: -1px;
+}
+
+.nav-tabs > li > a {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    line-height: 20px;
+    background: white;
+    color: #269;
+    border: 1px solid #269;
+    -webkit-border-radius: 4px 4px 0 0;
+    -moz-border-radius: 4px 4px 0 0;
+    border-radius: 4px 4px 0 0;
+    cursor: pointer;
+}
+
+.nav-tabs > li > a:hover{
+    background-color: rgba(34, 102, 153, 0.64);
+    color: #f2f2f2;
+    border-color: transparent;
+}
+
+.nav-tabs > .active > a,
+.nav-tabs > .active > a:hover,
+.nav-tabs > .active > a:focus {
+    background-color: #269;
+    color: white;
+}
+
+
+
+.tabbable {
+    *zoom: 1;
+    margin: 20px;
+}
+
+.tabbable:before,
+.tabbable:after {
+    display: table;
+    line-height: 0;
+    content: "";
+}
+
+.tabbable:after {
+    clear: both;
+}
+
+.tab-content {
+    border-top: 0;
+    background-color: #269;
+    background-image:linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0.4) 80%);
+    overflow: auto;
+    padding: 10px;
+}
+
+.tab-content > .tab-pane,
+.pill-content > .pill-pane {
+    display: none;
+}
+
+.tab-content > .active,
+.pill-content > .active {
+    display: block;
+}
+
+table {
+    max-width: 100%;
+    background-color: transparent;
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin: auto;
+}
+
+.table {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.table .smart-table-header-title{
+    padding: 0;
+}
+
+.table th,
+.table td {
+    padding: 8px;
+    line-height: 20px;
+    text-align: left;
+    vertical-align: top;
+    border: 1px solid rgba(34, 102, 153, 0.52);
+}
+
+.table th {
+    background: #269;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+
+}
+
+.table th:not(:last-child){
+    border-right:1px solid white;
+}
+
+.table thead th {
+    vertical-align: bottom;
+}
+
+.table tbody + tbody {
+    border-top: 2px solid #dddddd;
+}
+
+.pagination ul {
+    display: inline-block;
+    *display: inline;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    *zoom: 1;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.pagination ul > li {
+    display: inline;
+}
+
+.pagination ul > li > a,
+.pagination ul > li > span {
+    float: left;
+    padding: 4px 12px;
+    line-height: 20px;
+    text-decoration: none;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    border-left-width: 0;
+}
+
+.pagination ul > li > a:hover,
+.pagination ul > li > a:focus,
+.pagination ul > .active > a,
+.pagination ul > .active > span {
+    background-color: #f5f5f5;
+}
+
+.pagination ul > .active > a,
+.pagination ul > .active > span {
+    color: #999999;
+    cursor: default;
+}
+
+.pagination ul > .disabled > span,
+.pagination ul > .disabled > a,
+.pagination ul > .disabled > a:hover,
+.pagination ul > .disabled > a:focus {
+    color: #999999;
+    cursor: default;
+    background-color: transparent;
+}
+
+.pagination ul > li:first-child > a,
+.pagination ul > li:first-child > span {
+    border-left-width: 1px;
+    -webkit-border-bottom-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    -webkit-border-top-left-radius: 4px;
+    border-top-left-radius: 4px;
+    -moz-border-radius-bottomleft: 4px;
+    -moz-border-radius-topleft: 4px;
+}
+
+.pagination ul > li:last-child > a,
+.pagination ul > li:last-child > span {
+    -webkit-border-top-right-radius: 4px;
+    border-top-right-radius: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    -moz-border-radius-topright: 4px;
+    -moz-border-radius-bottomright: 4px;
+}
+
+
+.icon{
+    background-image: url("../img/glyphicons-halflings.png");
+}
+
+.icon-white {
+    background-image: url("../img/glyphicons-halflings-white.png");
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    margin-top: 1px;
+    *margin-right: .3em;
+    line-height: 14px;
+    vertical-align: text-top;
+    background-position: 14px 14px;
+    background-repeat: no-repeat;
+}
+
+
+.icon-download-alt {
+    background-position: -96px -24px;
+}
+
+button,
+input,
+select,
+textarea {
+    margin: 0;
+    font-size: 100%;
+    vertical-align: middle;
+}
+
+button,
+input {
+    *overflow: visible;
+    line-height: normal;
+}
+
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+}
+
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+    cursor: pointer;
+    -webkit-appearance: button;
+}
+
+label,
+select,
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"],
+input[type="radio"],
+input[type="checkbox"] {
+    cursor: pointer;
+}
+
+input[type="search"] {
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    -webkit-appearance: textfield;
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+}
+
+textarea {
+    overflow: auto;
+    vertical-align: top;
+}
+
+textarea:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="time"]:focus,
+input[type="week"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="color"]:focus,
+.uneditable-input:focus {
+    border-color: rgba(82, 168, 236, 0.8);
+    outline: 0;
+    outline: thin dotted  \9;
+    /* IE6-9 */
+
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+}
+
+.icon-edit {
+    background-position: -96px -72px;
+}
+
+.bubble{
+    padding: 5px;
+    background: #269;
+    border-radius: 3px;
+    color: #ffffff;
+    margin-left: 10px;
+}
+
+.bubble:before{
+    content: "";
+    position: relative;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border: 9px solid transparent;
+    border-right-color:#269;
+    left: -22px;
+    top:2px;
+}
+
+.doc{
+    padding: 5px;
+    border-radius: 3px;
+}
+
+.doc:hover{
+    background: #269;
+}
+
+.btn:hover{
+    background-color: rgba(34, 102, 153, 0.64);
+}
+
+#section-intro a{
+    color: #269;
+}
+
+#section-intro a:hover{
+    text-decoration: underline;
+}
+
+
 
 
 
